--- a/app/src/main/res/drawable/background_gradient_blue_grey_to_grey.xml
+++ b/app/src/main/res/drawable/background_gradient_blue_grey_to_grey.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:startColor="@color/black"
-        android:endColor="@color/grey_800"
+        android:startColor="@color/blue_grey_900"
+        android:endColor="@color/blue_grey_600"
         android:angle="270"/>
     <corners
         android:radius="0dp"/>
