--- a/app/src/main/res/layout/activity_movies_list.xml
+++ b/app/src/main/res/layout/activity_movies_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="vm"
-            type="gilbert.assessment.movies.ui.mainActivity.fragment.genre.GenreViewModel" />
+            type="gilbert.assessment.movies.ui.moviesList.MoviesListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,31 +14,28 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/llcMain"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:orientation="vertical"
+            android:background="@drawable/background_gradient_black_to_grey"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:orientation="vertical"
-            android:background="@drawable/background_gradient_black_to_grey">
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <include
                 android:id="@+id/iToolbar"
-                layout="@layout/toolbar_fragment_default"/>
+                layout="@layout/toolbar_default"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvGenre"
+                android:id="@+id/rvMovie"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_margin="@dimen/size16"
-                tools:listitem="@layout/adapter_genre"
+                android:orientation="vertical"
+                tools:listitem="@layout/adapter_movies_banner"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <include
-            android:id="@+id/iLoading"
-            layout="@layout/view_loading_layout"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
