--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -28,7 +28,7 @@
 
             <include
                 android:id="@+id/iToolbar"
-                layout="@layout/toolbar_default" />
+                layout="@layout/toolbar_fragment_default" />
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
@@ -77,6 +77,7 @@
                             android:text="@string/see_all"
                             android:textColor="@color/white"
                             android:textSize="@dimen/text14"
+                            android:onClickListener="@{vm::seeAllPopularOnClick}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -119,6 +120,7 @@
                             android:text="@string/see_all"
                             android:textColor="@color/white"
                             android:textSize="@dimen/text14"
+                            android:onClickListener="@{vm::seeAllTopRatedOnClick}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
