--- a/app/src/main/res/layout/toolbar_fragment_default.xml
+++ b/app/src/main/res/layout/toolbar_fragment_default.xml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
+        android:layout_height="?actionBarSize"
+        android:padding="@dimen/size16">
 
         <ImageView
-            android:id="@+id/ivBack"
+            android:id="@+id/ivLogo"
             android:layout_width="@dimen/size36"
             android:layout_height="@dimen/size36"
-            android:src="@drawable/ic_back_white"
-            android:padding="@dimen/size8"
-            android:layout_marginStart="@dimen/size16"
+            android:src="@drawable/ic_genre_white"
+            android:padding="@dimen/size4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:contentDescription="@null"/>
 
         <TextView
-            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="@string/genre"
-            android:textSize="@dimen/text16"
+            android:text="@string/movies"
             android:layout_marginStart="@dimen/size8"
+            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivBack"
+            app:layout_constraintStart_toEndOf="@+id/ivLogo"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:id="@+id/ivSearch"
+            android:layout_width="@dimen/size36"
+            android:layout_height="@dimen/size36"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@null"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
